@@ -71,6 +71,10 @@ describe Sunspot::Rails::Configuration, "default values without a sunspot.yml" d
   it "should handle the 'bind_address' property when not set" do
     @config.bind_address.should be_nil
   end
+
+  it "should handle the 'disabled' property when not set" do
+    @config.disabled?.should be_false
+  end
 end
 
 describe Sunspot::Rails::Configuration, "user provided sunspot.yml" do
@@ -124,6 +128,16 @@ describe Sunspot::Rails::Configuration, "user provided sunspot.yml" do
   end
 end
 
+describe Sunspot::Rails::Configuration, "with disabled: true in sunspot.yml" do
+  before(:each) do
+    ::Rails.stub!(:env => 'config_disabled_test')
+    @config = Sunspot::Rails::Configuration.new
+  end
+
+  it "should handle the 'disabled' property when set" do
+    @config.disabled?.should be_true
+  end
+end
 
 describe Sunspot::Rails::Configuration, "with ENV['SOLR_URL'] overriding sunspot.yml" do
   before(:all) do
